# HPC-digital-twin

./: LICENSE  README.md
backend/: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  juliapkg.json  pyproject.toml
backend/configs/: iot_config_local.json
backend/data/: itc-num_allocated_cores.json  itc-num_allocated_gpus.json  zih-example-data.parquet
backend/examples/: error_test.py  prediction_request_examples.py  run_digital_twin.py  wetter_agent_example.py
backend/scripts/: entrypoint.sh  setup_env.py
backend/scripts/fiware_setup/: clean_and_create.py  itc_entities.json  zih_entities.json
backend/scripts/influx_setup/: main.py  read_influx_values.py
backend/src/it_zauber_digital_twin/: cli.py  periodic_state_saver.py
backend/src/it_zauber_digital_twin/agents_itc/: __init__.py
backend/src/it_zauber_digital_twin/agents_zih/: __init__.py
backend/src/it_zauber_digital_twin/base_agents/: base_model_agent.py
backend/src/it_zauber_digital_twin/coordinator/: __init__.py  api.py  coordinator.py  coordinator_itc.py  coordinator_zih.py  optimization.py
backend/src/it_zauber_digital_twin/data_publishing_agent/: __init__.py  config_itc.json  config_zih.json  data_publishing_agent.py
backend/src/it_zauber_digital_twin/influx_agent/: dataframe_client.py  influx_agent.py
backend/src/it_zauber_digital_twin/unit_conversion/: unit_conversion.py  units.json
backend/src/it_zauber_digital_twin/utils/: __init__.py  config_loader.py  coordinator_loader.py  fiware_utils.py  mqtt_utils.py  utils.py  utils_zih.py
frontend/: .env  .gitignore  (+7 more)
(+84 files in other folders)
